--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 # Site Settings
-name: Jekflix
-title: Jekflix | A blog theme for Jekyll
-description: Jekflix is a template for Jekyll inspired by Netflix and made by Thiago Rossener.
+name: Jason_Ma
+title: Jason Ma | A Full Stack Developer
+description: A Full Stack Developer.
 tags:
   - blog
   - template
   - jekyll
   - theme
   - netlify
-email: youremail@xyz.com
+email: jason.ma1904@gmail.com
 disqus_username: disqus_username
 show_hero: true
 
 
 # Social Media Settings
 # Remove the item if you don't need it
-github_username: github_username
+github_username: tatoMa
 facebook_username: facebook_username
 twitter_username: twitter_username
 instagram_username: instagram_username
