--- a/src/yml/social.yml
+++ b/src/yml/social.yml
@@ -1,4 +1,4 @@
-github_username: github_username
+github_username: tatoMa
 facebook_username: facebook_username
 twitter_username: twitter_username
 instagram_username: instagram_username
