--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Settings
-name: Jason_Ma
+name: Jason<span style='color:red'>_</span>Ma
 title: Jason Ma | A Full Stack Developer
 description: A Full Stack Developer.
 tags:
