--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ tags:
   - theme
   - netlify
 email: jason.ma1904@gmail.com
-disqus_username: disqus_username
+disqus_username: tatoma
 show_hero: true
 
 
