--- a/src/yml/site.yml
+++ b/src/yml/site.yml
@@ -8,5 +8,5 @@ tags:
   - theme
   - netlify
 email: jason.ma1904@gmail.com
-disqus_username: disqus_username
+disqus_username: tatoma
 show_hero: true
