add minifier plugin

--- a/src/yml/_config.yml
+++ b/src/yml/_config.yml
@@ -45,6 +45,7 @@ paginate_content:
 plugins:
   - jekyll-paginate
   - jekyll-paginate-content
+  - jekyll-minifier
 
 # Exclude my node related stuff
 exclude: [
